// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateStepFile > should match snapshot 1`] = `
"import { render } from '@react-email/components';
import EmailTemplate from '../emails/welcome';

export const stepId = 'welcome-email';
export const workflowId = 'onboarding';
export const type = 'email';

export default async function({ payload, subscriber, context, steps }) {
  return {
    subject: payload.subject || 'No Subject',
    body: await render(
      <EmailTemplate
        {...payload}
        subscriber={subscriber}
        context={context}
        steps={steps}
      />
    ),
  };
}
"
`;

exports[`generateStepFile > should match snapshot with different import paths > nested-import 1`] = `
"import { render } from '@react-email/components';
import EmailTemplate from '../../src/emails/welcome';

export const stepId = 'welcome-email';
export const workflowId = 'onboarding';
export const type = 'email';

export default async function({ payload, subscriber, context, steps }) {
  return {
    subject: payload.subject || 'No Subject',
    body: await render(
      <EmailTemplate
        {...payload}
        subscriber={subscriber}
        context={context}
        steps={steps}
      />
    ),
  };
}
"
`;

exports[`generateStepFile > should match snapshot with different import paths > relative-import 1`] = `
"import { render } from '@react-email/components';
import EmailTemplate from './emails/welcome';

export const stepId = 'welcome-email';
export const workflowId = 'onboarding';
export const type = 'email';

export default async function({ payload, subscriber, context, steps }) {
  return {
    subject: payload.subject || 'No Subject',
    body: await render(
      <EmailTemplate
        {...payload}
        subscriber={subscriber}
        context={context}
        steps={steps}
      />
    ),
  };
}
"
`;

exports[`generateStepFile > should match snapshot with subject > with-subject 1`] = `
"import { render } from '@react-email/components';
import EmailTemplate from '../emails/welcome';

export const stepId = 'welcome-email';
export const workflowId = 'onboarding';
export const type = 'email';

export default async function({ payload, subscriber, context, steps }) {
  return {
    subject: payload.subject || 'Welcome to Acme!',
    body: await render(
      <EmailTemplate
        {...payload}
        subscriber={subscriber}
        context={context}
        steps={steps}
      />
    ),
  };
}
"
`;
